created PostDelegatingDeserializer